--- a/My Resume/index.html
+++ b/My Resume/index.html
@@ -45,9 +45,10 @@
                     </h1>
                     <div class="subheading mb-5">
                         Sunshine Coast, Queensland
-                        <a href="mailto:name@email.com">cjay44@hotmail.com</a>
+                        <a href="mailto:name@email.com">Corey.Johnstonit@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p>You are vistior: <span id="visitor-counter"></span></p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -221,5 +222,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!-- Counter JS-->
+        <script src="js/counter.js"> </script> 
     </body>
 </html>
