--- a/My Resume/index.html
+++ b/My Resume/index.html
@@ -47,8 +47,11 @@
                         Sunshine Coast, Queensland
                         <a href="mailto:name@email.com">Corey.Johnstonit@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Hardworking Student seeking a change in career.  A fast learner with a great work
+                        ethic and the ability to work independently or with others.  Ready to utilize my skills
+                        and passion to further the mission of a company</p>
                     <p>You are vistior: <span id="visitor-counter"></span></p>
+                    <br>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -58,41 +61,60 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Experience-->
+            <!-- Project Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Project Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Cloud Resume Challenge</h3>
+                            <div class="subheading mb-3"></div>
+                            <p> The Cloud resume challenge was created by Forest Brazeal which was designed to
+                                help bridge the gap from cloud certification to cloud jobs. </p> <br>
+                                <p>Tasks Completed: </p>
+                                <ul>
+                                    <li>Develop a website using HTML, CSS & JavaScript</li>
+                                    <li>Hosting a static website in an amazon s3 bucket</li>
+                                    <li>Configuring the DNS & SSL certificate using CloudFront and Route 53</li>
+                                    <li>Create a lambda function to update a DynamoDB item for the visitor count</li>
+                                    <li>Create a REST API with API gateway</li>
+                                    <li>Using Fetch API to access API gateway to display the visitor counter on the website</li>
+                                </ul>
+                                <p> To Do: </p>
+                                <ul>
+                                    <li>Create the IaC using Terraform or AWS SAM</li>
+                                    <li>Write end-to-end test for the code</li>
+                                    <li>Implement a continuous intergration/continuous deployment (CI/CD) pipeline using github actions</li>
+                                </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Janurary 22 - Present</span></div>
                     </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Work Experience-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Most Recent Employment History</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Supervisor, Buderim Ginger Factory, QLD</h3>
+                            <div class="subheading mb-3"></div>
+                            <div>Supervisor of a food hygiene cleaning team for ginger manufacturing equipment.
+                                High attention to detail ensuring food production surfaces remain at quality levels.</div>
+                                <br>
+                            <p><b>Key Roles: </b></p>
+                            <ul>
+                                <li>Scheduled daily task based on immediacy and importance</li>
+                                <li>Organized and prioritized work to complete jobs in a timely, efficient manner.</li>
+                                <li>Training and inducting new employees</li>
+                                <li>Paperwork management</li>
+                                <li>Quality Assurance</li>
+                                <li>Health & Safety pre/post reports</li>
+                            </ul>
+                            <p><b>Manager:</b> Dean Johnston, qaalert@kiccd.com.au</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2014 - Janurary 2022</span></div>
                     </div>
                 </div>
             </section>
@@ -103,20 +125,12 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">LaTrobe University</h3>
+                            <div class="subheading mb-3">Bachelor of Applied Information & Technology</div>
+                            <ul> Relavent Courses Completeed: </ul>
+                            <li> </li>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Janurary 2020 - June 2024</span></div>
                     </div>
                 </div>
             </section>
@@ -127,9 +141,9 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>                     
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                      <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
@@ -139,8 +153,9 @@
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                      -->
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3"></div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
