Put more details on my resume

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <p> To Do: </p>
                                 <ul>
                                     <li>Create the IaC using Terraform or AWS SAM</li>
-                                    <li>Write end-to-end test for the code</li>
+                                    <li>Write end-to-end test for the code using cypress</li>
                                     <li>Implement a continuous intergration/continuous deployment (CI/CD) pipeline using github actions</li>
                                 </ul>
                         </div>
@@ -127,8 +127,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">LaTrobe University</h3>
                             <div class="subheading mb-3">Bachelor of Applied Information & Technology</div>
-                            <ul> Relavent Courses Completeed: </ul>
-                            <li> </li>
+                            <ul>Relavent Courses Completeed: </ul>
+                            <li>Network Engineering Fundamentals</li>
+                            <li>Object orientated programming(Java)</li>
+                            <li>Database Fundamentals on the cloud</li>
+                            <li>Information System Infrastructure</li>
+                            <li>Sustainability Practices</li>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Janurary 2020 - June 2024</span></div>
                     </div>
@@ -139,12 +143,13 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
+                    <div>I am a fast learner, I am constantly increasing my skills and knowledge. </div>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>                     
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                      <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                       <!--  <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
@@ -159,19 +164,23 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            AWS Cloud: s3, DynamoDB, Lambda, Api gateway
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Git & github
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Problem solving/Analysis
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Organisational Skills
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Time Management
                         </li>
                     </ul>
                 </div>
@@ -181,54 +190,23 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>When I am not studying, I am a rock climber, mountain biker, novice sailer and exploring new places.
+                        I am also a G1 in Krav maga and I have my black belt in Eskrima.
+                    </p>
+                    <p class="mb-0"></p>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Associate AWS developer (Completion date: Feburary, 2022)
                         </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
+
                     </ul>
                 </div>
             </section>
