--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>hey Johnston || Resume</title>
+        <title>Corey Johnston || Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
                         <span class="text-primary">Johnston</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Sunshine Coast, Queensland
+                        Sydney, New South Wales
                         <a href="mailto:name@email.com">Corey.Johnstonit@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Hardworking Student seeking a change in career.  A fast learner with a great work
@@ -144,6 +144,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div>I am a fast learner, I am constantly increasing my skills and knowledge. </div>
+                    <br>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>                     
